@@ -7,6 +7,7 @@ fidoconfig 0.10
 Thu Jun  2 12:04:42 NOVST 2000
 max:
 * fixed fgetsUntil0 function (thanx to Gena Makhomed)
+* added token setConsoleTitle for win32 platform
 
 ----- cvs ci ------
 Thu Jun  1 11:51:34 NOVST 2000
